# SSL-Augmented-Reality-App

./: .cproject  .project  CMAKE_DEBUG.launch  CMAKE_RELEASE.launch  CMakeLists.txt  README  augmSSL.launch
src/: .gitignore  Makefile
src/AugmSSL/: AiDataLoader.cpp  AiDataLoader.h  AugmSSL.cpp  AugmSSL.h  BotDetector.cpp  BotDetector.h  CMakeLists.txt  CircleRenderer.cpp  CircleRenderer.h  FieldCorner.cpp  FieldCorner.h  FieldInit.cpp  FieldInit.h  FieldLineDetector.cpp  FieldLineDetector.h  FieldModel.cpp  FieldModel.h  GeoUtil.cpp  GeoUtil.h  IHDetector.h  IRenderer.h  LineRenderer.cpp  LineRenderer.h  LineSampler.cpp  LineSampler.h  MainWindow.cpp  MainWindow.h  PointRenderer.cpp  PointRenderer.h  StaticDetector.cpp  StaticDetector.h  TextRenderer.cpp  TextRenderer.h  TransformationCalibration.cpp  TransformationCalibration.h  Transformer.cpp  Transformer.h  opencv_compat.h
src/Examples/: CMakeLists.txt  HoughCircle_Demo.cpp  HoughLines_Demo.cpp  LSWMS.cpp  LSWMS.h  SURF_Homography.cpp  augm_wrapper.proto  cannyContoursEllipse.cpp  colorAreas.cpp  colorDetection.cpp  findContours_demo.cpp  houghlines.cpp  reduceImage.cpp
